# slacks

./: .env.example  .fatty-author-result.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  fatty.code-workspace
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  verify  verify.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_identity.py  0002_goals_and_daily_targets.py  0003_log_events.py  0004_estimation_jobs_runs.py  0005_derived_items_and_clarification.py  0006_exercise_active_calories.py  0007_food_products_evidence.py  0008_corrections_and_snapshots.py  0009_saved_foods_and_aliases.py  0010_products_barcode_key.py  0011_log_attachments.py  0012_evidence_assumptions.py  0013_weight_entries.py  0014_target_override.py  0015_log_event_idempotency_key.py  0016_clarification_answers.py  0017_clarification_question_options.py  0019_log_event_voided_at.py  0020_clarification_question_derived_food_item.py  0021_corrections_polymorphic_values.py  0022_log_attachments_transient.py  0023_log_event_name.py
backend/app/: db.py  deps.py  enums.py  logging.py  main.py  normalization.py  settings.py  timeutils.py  worker.py
backend/app/estimator/: __init__.py  barcode_proposal.py  branded_routing.py  calculator.py  clarify_policy.py  common_portions.py  comparable_reference.py  constants.py  correction_resolution.py  count_serving_resolution.py  decision_trace.py  degrade.py  detail_signals.py  enqueue.py  event_images.py  evidence_utils.py  evidence_view.py  exact_evidence.py  exercise.py  exercise_step.py  fdc.py  fdc_ranking.py  food_resolvers.py  food_serving.py  food_step.py  hardened_fetch.py  identity_fallback.py  identity_sanitizer.py  image_facts_step.py  interpretation.py  interpretation_tools.py  label_proposal.py  label_step.py  label_upload.py  met_table.py  model_prior.py  off.py  off_name_tier.py  official_fetch.py  official_step.py  (+25 more)
backend/app/llm/: __init__.py  base.py  config.py  errors.py  factory.py  transport.py
backend/app/llm/providers/: __init__.py  anthropic.py  claude_code.py  codex.py  fake.py  openai.py
backend/app/models/: __init__.py  attachments.py  corrections.py  derived.py  estimation.py  food_sources.py  identity.py  log_events.py  saved_foods.py  targets.py  weight_entries.py
backend/app/ops/: __init__.py  food_dogfood_api.py  food_dogfood_fixtures.json  food_dogfood_fixtures.py  food_dogfood_smoke.py  sim_readiness.py
backend/app/routers/: auth.py  corrections.py  daily_summary.py  exact_evidence.py  food_suggestions.py  goals.py  health.py  log_event_multipart.py  log_events.py  profile.py  re_match.py  saved_foods.py  targets.py  weight_entries.py
backend/app/schemas/: attachments.py  auth.py  corrections.py  daily_summary.py  estimation.py  exact_evidence.py  food_suggestions.py  goals.py  health.py  label_proposal.py  log_events.py  official_source.py  parse.py  profile.py  re_match.py  saved_foods.py  sources.py  targets.py  weight_entries.py
backend/app/security/: __init__.py  passwords.py  tokens.py
backend/app/services/: attachments.py  auth.py  barcode_proposal.py  clarification.py  corrections.py  daily_summary.py  daily_summary_predicates.py  exact_evidence.py  food_suggestions.py  goals.py  health.py  item_read_model.py  label_exact_proposal.py  label_proposal.py  log_events.py  profile.py  saved_foods.py  sources.py  targets.py  weight_entries.py
backend/app/services/targets/: __init__.py  access.py  calculator_input.py  derivation.py  errors.py  override_rules.py  overrides.py  read_model.py  resolution.py
backend/tests/: conftest.py  corrections_helpers.py  estimate_first_representative_harness.py  exact_evidence_helpers.py  interpretation_regression_harness.py  test_active_target_resolver.py  test_attachments_migration.py  test_attachments_retention.py  test_attachments_transient.py  test_attachments_transient_migration.py  test_auth_api.py  test_auth_rate_limit.py  test_barcode_proposal.py  test_barcode_resolution.py  test_brand_aware_packaged_routing.py  test_branded_routing.py  test_calorie_anchor_resolution.py  test_clarification_answer_api.py  test_clarification_answer_pg.py  test_clarification_answers_migration.py  test_clarify_calibration.py  test_claude_code_diagnostics.py  test_codex_diagnostics.py  test_common_food_resolution.py  test_common_portions.py  test_comparable_reference.py  test_composed_dish_resolution.py  test_corrections_api.py  test_corrections_immutability.py  test_corrections_migration.py  test_corrections_rescale.py  test_count_serving_official_resolution.py  test_counted_crackers_hummus_resolution.py  test_cross_provider_judge.py  test_daily_summary_api.py  test_daily_summary_service.py  test_decision_trace.py  test_decision_trace_pipeline.py  test_degrade.py  test_derived_migration.py  (+104 more)
backend/tests/fixtures/estimate_first_representative/: README.md  corpus.json
backend/tests/fixtures/parse_calibration/: README.md  baseline_summary.json  calibration_summary.json  examples.jsonl  generate_fixture.py  generate_naturalistic_seed.py  naturalistic_adjudication_queue.jsonl  naturalistic_examples.jsonl  naturalistic_judge_run.json  self_consistency_summary.json
backend/tests/llm/: __init__.py  conftest.py  test_anthropic_provider.py  test_claude_code_provider.py  test_codex_provider.py  test_config.py  test_factory.py  test_openai_provider.py  test_openrouter_smoke.py  test_structured_completion.py  test_transport.py
backend/tests/parse_calibration/: __init__.py  __main__.py  harness.py  judge.py
backend/tests/security/: __init__.py  _harness.py  test_authz_fail_closed.py  test_prompt_injection.py  test_query_sanitization.py  test_secret_no_disclosure.py  test_security_headers.py  test_ssrf_egress.py
backend/tests/snapshots/: openapi.json
contracts/: README.md
docs/: agent-event-log.md  agent-model-policy.md  agent-operating-system.md  agent-polling.md  design-philosophy.md  (+3 more)
(+698 files in other folders)
