[project]
name = "fatty-backend"
version = "1.0.0"
description = "Fatty backend FastAPI application skeleton."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.30",
    # Celery worker + Redis broker for the local Docker Compose stack (FTY-011).
    # The architecture (docs/architecture/system-overview.md) and README mandate
    # "Celery workers with Redis queue"; the ``[redis]`` extra pulls the broker
    # client. No task definitions are added yet.
    "celery[redis]>=5.6.3",
    # Direct Redis client for the auth-endpoint rate limiter (FTY-118). Redis is
    # already in the lock-file as a transitive dep of celery[redis]; this makes
    # the direct import explicit so tooling tracks the dependency accurately.
    "redis>=4.0",
    # Persistence + migrations for the canonical identity/profile data model
    # (FTY-020). SQLAlchemy provides typed ORM models and the schema metadata;
    # Alembic owns the versioned migrations (the baseline migration creates the
    # users/auth_identities/user_profiles tables). ``psycopg[binary]`` is the
    # Postgres driver for the Docker Compose / self-host runtime; tests run the
    # same models and migration against stdlib SQLite, so no live Postgres is
    # required for ``make verify``.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.6",
]

# This is an application, not a distributable library, so uv manages the
# environment without building/installing the project itself. `app` is made
# importable for tooling via pytest/mypy path configuration below.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, pyupgrade, and bandit security rules.
select = ["E", "F", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
# Assertions are the expected idiom in tests; S101 would flag every one.
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

# Celery ships partial inline types but no complete stubs under strict mypy.
[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
