[project]
name = "fatty-backend"
version = "1.0.0"
description = "Fatty backend FastAPI application skeleton."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    # Celery worker + Redis broker for the local Docker Compose stack (FTY-011).
    # The architecture (docs/architecture/system-overview.md) and README mandate
    # "Celery workers with Redis queue"; the ``[redis]`` extra pulls the broker
    # client. No task definitions are added yet.
    "celery[redis]>=5.6.3",
    # Direct Redis client for the auth-endpoint rate limiter (FTY-118). Redis is
    # already in the lock-file as a transitive dep of celery[redis]; this makes
    # the direct import explicit so tooling tracks the dependency accurately.
    "redis>=4.0",
    # Persistence + migrations for the canonical identity/profile data model
    # (FTY-020). SQLAlchemy provides typed ORM models and the schema metadata;
    # Alembic owns the versioned migrations (the baseline migration creates the
    # users/auth_identities/user_profiles tables). ``psycopg[binary]`` is the
    # Postgres driver for the Docker Compose / self-host runtime; tests run the
    # same models and migration against stdlib SQLite, so no live Postgres is
    # required for ``make verify``.
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=2.2.0",
    "pytest>=8.3",
    "ruff>=0.6",
]

# This is an application, not a distributable library, so uv manages the
# environment without building/installing the project itself. `app` is made
# importable for tooling via pytest/mypy path configuration below.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, pyupgrade, bandit security rules, plus
# flake8-simplify (SIM), flake8-unused-arguments (ARG), mccabe complexity (C90),
# Pylint (PL), Ruff-specific rules (RUF), and Perflint (PERF) so the verify gate
# catches code smells and dead code mechanically instead of on the reviewer's
# plate (FTY-231).
select = ["E", "F", "I", "B", "UP", "S", "SIM", "ARG", "C90", "PL", "RUF", "PERF"]
# Mathematical/typographic symbols used deliberately in scientific docstrings and
# formulas (density ρ, multiplication ×, minus −, en-dash – in ranges). Replacing
# them with ASCII look-alikes (ρ→p, ×→x) would corrupt the notation, so they are
# allowed rather than "fixed". RUF001/002/003 still flag any other confusable.
allowed-confusables = ["–", "−", "×", "ρ"]

[tool.ruff.lint.pylint]
# Smallest cap that fits the current cohesive signatures (the widest are 9-arg:
# e.g. confirm_label_proposal's keyword-only nutrition adjustments), capped at 10
# per FTY-231. Signature refactors are a Non-Goal; nothing exceeds this today.
max-args = 9

[tool.ruff.lint.per-file-ignores]
# Assertions are the expected idiom in tests; S101 would flag every one.
# PLR2004 (literal assertions) and ARG (unused fixture/mock arguments) are
# likewise idiomatic in test code, so they are ignored under tests/ only.
"tests/**" = ["S101", "PLR2004", "ARG"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

# Celery ships partial inline types but no complete stubs under strict mypy.
[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
